# l3_core

./: .gitignore  LICENSE
l3_libs/: CMakeLists.txt  package.xml
l3_libs/cmake/: l3-extras.cmake
l3_libs/include/l3_libs/: helper.h  macros.h  profiler.h  singleton.h  yaml_parser.h
l3_libs/include/l3_libs/conversions/: l3_kdl_conversions.h  l3_msg_conversions.h  l3_msg_floating_base_conversions.h  l3_msg_foothold_conversions.h  l3_msg_std_conversions.h  l3_msg_step_conversions.h  l3_msg_step_feedback_conversions.h  l3_tf_conversions.h  serialization.h
l3_libs/include/l3_libs/robot_description/: base_info.h  foot_info.h  leg_info.h  robot_description.h  robot_description_server.h
l3_libs/include/l3_libs/types/: abstract_step.h  array_2d.h  base_link.h  base_queue.h  base_step.h  base_step_data.h  boost_types.h  eigen_types.h  floating_base.h  foot_step_data.h  foothold.h  joint_states.h  memory.h  stdlib_types.h  step.h  step_data.h  step_feedback.h  step_feedback_data.h  step_feedback_queue.h  step_queue.h  type_traits.h  typedefs.h  types.h  variant_data.h  variant_data_macros.h
l3_libs/src/: helper.cpp  profiler.cpp  yaml_parser.cpp
l3_libs/src/conversions/: l3_kdl_conversions.cpp  l3_msg_floating_base_conversions.cpp  l3_msg_foothold_conversions.cpp  l3_msg_std_conversions.cpp  l3_msg_step_conversions.cpp  l3_msg_step_feedback_conversions.cpp  l3_tf_conversions.cpp  serialization.cpp
l3_libs/src/robot_description/: base_info.cpp  foot_info.cpp  leg_info.cpp  robot_description.cpp  robot_description_server.cpp
l3_libs/src/types/: base_link.cpp  base_step_data.cpp  floating_base.cpp  foot_step_data.cpp  foothold.cpp  joint_states.cpp  step.cpp  step_data.cpp  step_feedback.cpp  step_feedback_data.cpp  step_feedback_queue.cpp  step_queue.cpp  variant_data.cpp
l3_libs/test/include/l3_libs/: test_macros.h
l3_libs/test/launch/: utest.test
l3_libs/test/src/: step_data_utest.cpp  typedefs_utest.cpp  variant_data_utest.cpp
l3_math/: CMakeLists.txt  package.xml
l3_math/include/l3_math/: angles.h  fifth_order_polynomial_trajectory.h  math.h  polynomial_approach_trajectory.h
l3_math/src/: angles.cpp  fifth_order_polynomial_trajectory.cpp  math.cpp  polynomial_approach_trajectory.cpp
l3_msgs/: CMakeLists.txt  package.xml
l3_msgs/msg/: BaseInfo.msg  BaseStepData.msg  ControlInOut.msg  DampingControlParams.msg  FloatingBase.msg  FootInfo.msg  FootStepData.msg  Foothold.msg  LegInfo.msg  PIDControlGains.msg  RobotDescription.msg  RobotModel.msg  Step.msg  StepData.msg  StepFeedback.msg  StepFeedbackData.msg  StepFeedbackQueue.msg  StepQueue.msg  VariantDataSet.msg
l3_plugins/: CMakeLists.txt  package.xml  plugins.xml
l3_plugins/include/l3_plugins/: robot_model.h  robot_model_server.h
l3_plugins/include/l3_plugins/aggregator/: joint_cmd_interface_aggregator.h
l3_plugins/include/l3_plugins/base/: dynamics_plugin.h  ft_sensor_plugin.h  gait_generator_plugin.h  imu_sensor_plugin.h  interface_plugin.h  joint_cmd_interface_plugin.h  joint_states_plugin.h  kinematics_plugin.h
l3_plugins/include/l3_plugins/std/: bipedal_gait_generator.h  cyclic_gait_generator.h  ft_sensor_topic.h  imu_sensor_topic.h  joint_cmd_interface_topic.h  joint_states_topic.h  kdl_kinematics.h  quadrupedal_gait_generator.h
l3_plugins/src/: robot_model.cpp  robot_model_server.cpp
l3_plugins/src/aggregator/: joint_cmd_interface_aggregator.cpp
l3_plugins/src/base/: dynamics_plugin.cpp  ft_sensor_plugin.cpp  gait_generator_plugin.cpp  imu_sensor_plugin.cpp  interface_plugin.cpp  joint_cmd_interface_plugin.cpp  joint_states_plugin.cpp  kinematics_plugin.cpp
l3_plugins/src/std/: bipedal_gait_generator.cpp  cyclic_gait_generator.cpp  ft_sensor_topic.cpp  imu_sensor_topic.cpp  joint_cmd_interface_topic.cpp  joint_states_topic.cpp  kdl_kinematics.cpp  quadrupedal_gait_generator.cpp
l3_vis/: CMakeLists.txt  package.xml
l3_vis/include/l3_vis/: visualization.h
l3_vis/src/: visualization.cpp
